<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/profile" />
    </group>

    <group android:checkableBehavior="single">
        <item android:title="Navigations">
            <menu>
                <group>
                    <item
                        android:id="@+id/nav_home"
                        android:icon="@drawable/baseline_home_24"
                        android:title="@string/home" />

                    <item
                        android:id="@+id/nav_favouriteList"
                        android:icon="@drawable/baseline_favorite_24"
                        android:title="@string/favourite_list" />

                    <item
                        android:id="@+id/nav_community"
                        android:icon="@drawable/baseline_community_24"
                        android:title="@string/community" />

                    <item
                        android:id="@+id/nav_rentalRoom"
                        android:icon="@drawable/baseline_rental_24"
                        android:title="@string/rental_room" />

                   <!-- <item
                        android:id="@+id/nav_changePassword"
                        android:icon="@drawable/baseline_key_24"
                        android:title="@string/change_password" />-->

                    <item
                        android:id="@+id/nav_settings"
                        android:icon="@drawable/baseline_settings_24"
                        android:title="@string/settings" />

                    <item
                        android:id="@+id/nav_logout"
                        android:icon="@drawable/baseline_logout_24"
                        android:title="@string/logout"/>
                </group>
            </menu>
        </item>
    </group>

</menu>